FIxed bug with error container on mobile

--- a/client/src/assets/form.css
+++ b/client/src/assets/form.css
@@ -131,6 +131,7 @@
     .error-container {
         flex-direction: row;
         right: 0;
+        top: 140px;
         width: 90%;
     }
 
